* vignettes/irace-package.Rnw: Round to digits in example of repairConfiguration.

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1494,6 +1494,7 @@ repairConfiguration = function (configuration, parameters, digits)
 {
   isreal <- parameters$type[colnames(configuration)] %in% "r"
   configuration[isreal] <- configuration[isreal] / sum(configuration[isreal])
+  configurations[isreal] <- round(configuration[isreal], digits)
   return(configuration)
 }
 @
