--- a/inst/examples/moaco/README
+++ b/inst/examples/moaco/README
@@ -10,7 +10,7 @@ traveling salesperson problem (bTSP):
     Multi-Objective Ant Colony Optimization Algorithms. IEEE
     Transactions on Evolutionary Computation, 2012. 
     doi:10.1109/TEVC.2011.2182651
-    (PDF preprint) http://iridia.ulb.ac.be/IridiaTrSeries/IridiaTr2011-003.pdf
+    (PDF preprint) https://iridia.ulb.ac.be/IridiaTrSeries/link/IridiaTr2011-003.pdf
 
 The MOACO framework software can be download from:
 
