--- a/TODO
+++ b/TODO
@@ -51,8 +51,10 @@ TODO General (in order of importance):
  
  * Federico's implementation of DAG / Complexity metric.
 
- * In src/irace/irace.c, set R_LIBS in the environment to the directory holding
-   the executable.
+ * In src/irace/irace.c, use https://github.com/gpakosz/whereami to find the
+   directory containing the 'irace' executable, then set
+   ".libPaths(c(.libPaths(), EXEC_DIR))" so that we load the package from the
+   directory holding the executable.
 
  * Use both cost and time to calculate wins, then use a prop.test
    prop.test(x=c(sum(x <0.5),sum(y<0.5)), n=c(length(x), length(y)))
