* tests/testthat/test-repair.R: Fix repair_order.  * vignettes/irace-package.Rnw: Same.

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1482,7 +1482,7 @@ repairConfiguration = function(configuration, parameters)
 {
  columns <- c("p1","p2","p3")
  # cat("Before"); print(configuration)
- configuration[columns] <- sort(configuration[columns])
+ configuration[columns] <- sort(unlist(configuration[columns], use.names=FALSE))
  # cat("After"); print(configuration)
  return(configuration)
 }
